--- a/public/index.html
+++ b/public/index.html
@@ -113,9 +113,9 @@
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-table@1.22.6/dist/bootstrap-table.min.js"></script>
     <script src="js/bootbox.js"></script>
-    <script src="js/constants.js"></script>
+    <script src="js/constants.js?override_cache=deploy_version"></script>
     <script src="js/papaparse.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js?override_cache=deploy_version"></script>
 
 
 </body>
