--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,7 @@
                         <table id="clients-table">
                             <thead>
                                 <tr>
+                                  <th data-field="state" data-checkbox="true"></th>
                                   <th data-field="name">Client</th>
                                   <th data-field="regions" data-formatter="regionFormatter">Regions</th>
                                 </tr>
