--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             width: 100%;
         }
     </style>
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css?override_cache=deploy_version" rel="stylesheet">
 
 
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.4.0/mapbox-gl.js"></script>
