--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,10 @@
                                 <th scope="row">Region of the Lead</th>
                                 <td id="tdRegionOfSelectedLead"></td>
                             </tr>
+                            <tr>
+                                <th scope="row">Notes</th>
+                                <td id="tdLeadNotes"></td>
+                            </tr>
                             </tbody>
                     </table>
                     <div id="noClient">
