added send lead count

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
                             <thead>
                                 <tr>
                                   <th data-field="state" data-checkbox="true"></th>
-                                  <th data-field="name">Client</th>
+                                  <th data-field="name"  data-formatter="clientNameFormatter">Client</th>
                                   <th data-field="regions" data-formatter="regionFormatter">Regions</th>
                                 </tr>
                               </thead>
