Poland; clients of industry sheets are implemented

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,13 @@
         <div id="left" class="sidebar flex-center left collapsed">
             <div class="sidebar-content rounded-rect flex-center">
                 <div class="legend">
+                    <div id="authenticate-spinner" style="display: none;">
+                        <div  class="d-flex align-items-center">
+                            <strong role="status">Authenticating...</strong>
+                            <div class="spinner-border ms-auto" aria-hidden="true"></div>
+                        </div>
+                    </div>
+                      
                     <b>Countries</b>
                     <div>
                         <ul id="countries">
